k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookmarks
  labels:
    pod-security.kubernetes.io/enforce: privileged
