k8s/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookmarks
spec:
  hostnames:
  - bookmarks.cluster.local
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: bookmarks
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
